--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shared_mongodb"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Shigeo NAKAMURA <nakamura_shigeo@yahoo.com>"]
 edition = "2021"
 description = "Handy functions to share a mongodb client within a process"
@@ -15,3 +15,6 @@ maintenance = { status = "passively-developed" }
 
 [dependencies]
 mongodb = "2.1.0"
+
+[dev-dependencies]
+actix-web = "3"
